fixed map image 404, rock positioning on small screens/running into location text

--- a/web/files/css/windows/rock_window.css
+++ b/web/files/css/windows/rock_window.css
@@ -33,6 +33,12 @@
     cursor: pointer;
 }
 
+@media (max-width: 1024px) {
+    #petrock {
+        left: 30%;
+    }
+}
+
 #petrock:hover {
     -webkit-filter: drop-shadow(0 1px 2px cyan);
     -moz-filter: drop-shadow(0 1px 2px cyan);
